# minimal-cuda-cmake

./: .gitignore  CMakeLists.txt  README.md  build_sumArraysOnGPU.bat  configure_sumArraysOnGPU.bat  loggedbuild_sumArraysOnGPU.bat  sumArraysOnGPU.cu
references/: Amazon.com- Professional CUDA C Programming eBook- John Cheng, Max Grossman, Ty McKercher- Kindle Store.url  Building Cross-Platform CUDA Applications with CMake - NVIDIA Developer Blog.url  CMake- ...-SeparateCompilation-CMakeLists.txt - Fossies.url  CUDACast #2 - Your First CUDA C Program - YouTube - youtube.url  FindCUDA — CMake 3.9.6 Documentation.url  NVCC -- CUDA Toolkit Documentation.url  code-samples-posts-cmake at master · robertmaynard-code-samples.url  cuDNN Installation Guide -- Deep Learning SDK Documentation.url
